check_errors.txt
    Checking kosh v0.1.0 (/mnt/c/Work/Taregna/Kosh)
warning: unused import: `Charset`
 --> src/segue/shard.rs:6:21
  |
6 | ...::{ Charset, IGr...
  |        ^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0614]: type `dyn INode<'static> + Send + Sync` cannot be dereferenced
  --> src/segue/shard.rs:57:19
   |
57 | ...> &**self._Left,
   |       ^^^^^^^^^^^^ can't be dereferenced
   |
   = note: the full name for the type has been written to '/mnt/c/Work/Taregna/Kosh/target/debug/deps/kosh-638de408b59958a0.long-type-8362850098458727497.txt'
   = note: consider using `--verbose` to print the full type name to the console

error[E0614]: type `dyn INode<'static> + Send + Sync` cannot be dereferenced
  --> src/segue/shard.rs:58:19
   |
58 | ...> &**self._Right,
   |       ^^^^^^^^^^^^^ can't be dereferenced
   |
   = note: the full name for the type has been written to '/mnt/c/Work/Taregna/Kosh/target/debug/deps/kosh-638de408b59958a0.long-type-8362850098458727497.txt'
   = note: consider using `--verbose` to print the full type name to the console

error[E0614]: type `dyn INode<'static> + Send + Sync` cannot be dereferenced
   --> src/segue/shard.rs:124:19
    |
124 | ...> &**self._Left,
    |       ^^^^^^^^^^^^ can't be dereferenced
    |
    = note: the full name for the type has been written to '/mnt/c/Work/Taregna/Kosh/target/debug/deps/kosh-638de408b59958a0.long-type-8362850098458727497.txt'
    = note: consider using `--verbose` to print the full type name to the console

error[E0614]: type `dyn INode<'static> + Send + Sync` cannot be dereferenced
   --> src/segue/shard.rs:125:19
    |
125 | ...> &**self._Right,
    |       ^^^^^^^^^^^^^ can't be dereferenced
    |
    = note: the full name for the type has been written to '/mnt/c/Work/Taregna/Kosh/target/debug/deps/kosh-638de408b59958a0.long-type-8362850098458727497.txt'
    = note: consider using `--verbose` to print the full type name to the console

error[E0308]: mismatched types
   --> src/segue/shard.rs:178:44
    |
178 | ... = XField::FluxSource(node._USeg);
    |       ------------------ ^^^^^^^^^^ expected `&dyn IXFluxSource`, found `USeg`
    |       |
    |       arguments to this enum variant are incorrect
    |
    = note: expected reference `&dyn IXFluxSource`
                  found struct `USeg`
note: tuple variant defined here
   --> src/flux/xflux.rs:17:5
    |
 17 |     FluxSource( &...
    |     ^^^^^^^^^^
help: consider borrowing here
    |
178 |                 *item = XField::FluxSource(&node._USeg);
    |                                            +

error[E0614]: type `dyn INode<'static> + Send + Sync` cannot be dereferenced
   --> src/segue/shard.rs:190:14
    |
190 | ...  &**self._Child
    |       ^^^^^^^^^^^^^ can't be dereferenced
    |
    = note: the full name for the type has been written to '/mnt/c/Work/Taregna/Kosh/target/debug/deps/kosh-638de408b59958a0.long-type-8362850098458727497.txt'
    = note: consider using `--verbose` to print the full type name to the console

error[E0614]: type `dyn INode<'static> + Send + Sync` cannot be dereferenced
   --> src/segue/shard.rs:273:14
    |
273 | ...  &**self._Child
    |       ^^^^^^^^^^^^^ can't be dereferenced
    |
    = note: the full name for the type has been written to '/mnt/c/Work/Taregna/Kosh/target/debug/deps/kosh-638de408b59958a0.long-type-8362850098458727497.txt'
    = note: consider using `--verbose` to print the full type name to the console

error[E0614]: type `dyn IWork` cannot be dereferenced
   --> src/segue/shard.rs:294:30
    |
294 | ...= &**self._Action as...
    |       ^^^^^^^^^^^^^^ can't be dereferenced
    |
    = note: the full name for the type has been written to '/mnt/c/Work/Taregna/Kosh/target/debug/deps/kosh-638de408b59958a0.long-type-14789317119404019427.txt'
    = note: consider using `--verbose` to print the full type name to the console

Some errors have detailed explanations: E0308, E0614.
For more information about an error, try `rustc --explain E0308`.
warning: `kosh` (lib) generated 1 warning
error: could not compile `kosh` (lib) due to 8 previous errors; 1 warning emitted
